--- a/custom_components/hassam/translations/en.json
+++ b/custom_components/hassam/translations/en.json
@@ -25,5 +25,17 @@
                 }
             }
         }
+    },
+    "services": {
+        "find_address": {
+            "name": "Find address string",
+            "description": "Searches for an address using a free text string. Response will include up to 10 addresses.",
+            "fields": {
+                "search_string": {
+                    "name": "Search string",
+                    "description": "Enter your address"
+                }
+            }
+        }
     }
 }
